network import/export parameters moved to parameters view
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>